# jcbt-seeing-analysis

./: JCBT_fwhm_updated.py  JCBT_fwhm_updated_v2.py  LICENSE  README.md  plot_fwhm.py  plot_fwhm_v2.py  pyproject.toml
pyraf/: clcache.sqlite3
src/jcbt_analysis/: core.py  plotter.py  settings.py
src/jcbt_seeing_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
